[project]
name = "tls_fragment"
version = "4.1.0"
description = "tls fragment"
readme = "README.md"
requires-python = ">=3.11,<4"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ahocorasick-python ==0.0.9",
    "requests >=2.32.3,<3.0.0",
    "dnspython >=2.3.0,<3.0.0",
]

[[project.authors]]
name = "Maoist2009"
email = "maoist2009@example.com"

[dependency-groups]
dev = [
    "pylint >=2.17.4,<3.0.0",
    "isort >=5.12.0,<6.0.0",
    "pytest >=7.3.1,<8.0.0",
    "tox >=4.5.2,<5.0.0",
    "mkdocs >=1.4.3,<2.0.0",
    "mkdocs-material >=8.5.11,<9.0.0",
    "pytest-pylint >=0.19.0,<0.20.0",
    "pre-commit >=3.3.2,<4.0.0",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120

[project.scripts]
tls_fragment = "tls_fragment.cli:start_server"
